# Striver_A2Z

./: CMakeLists.txt  Error.out  README.md  input.txt  jspwTest.cpp  output.txt  temp.cpp  template.cpp  template.h
ARRAYS/EASY/: CHECK_IF_ARRAY_IS_SORTED.cpp  LARGEST_ELEMENT.cpp  LEFT_ROTATE_BY_D.cpp  LINEAR_SEARCH.cpp  LONGEST_SUBARRAY_WITH_SUM_K.cpp  MISSING_NUMBER.cpp  MOVE_ALL_ZEROES.cpp  REMOVE_DUPLICATES.cpp  SECOND_LARGEST_SMALLEST.cpp  SINGLENUMBER.cpp
ARRAYS/HARD/: MAJORITY_ELEMENT.cpp
ARRAYS/MEDIUM/: MAXMSUBARRAYSUM.cpp  NEXT_PERMUTATION.cpp  ROTATE_MATRIX.cpp
BINARY SEARCH/: FIRST_LAST_OCCURENCE.cpp  MINM_IN_ROTATED_ARRAY.java  PEAKELEMENT.java  Singleelementinsortedarray.java  algo.cpp  lower_upper_bounds.cpp  rotatedarray.cpp  rotatedarray2.cpp
BINARY SEARCH/BS ON 1D ARRAYS/: MINM_IN_ROTATED_ARRAY.java  PEAKELEMENT.java  X_SUBARRAY.cpp  t.cpp
BINARY SEARCH/BS ON ANSWERS/: Aggresive_Cows.cpp  KOKO_EATS_BANANAS.java  Missing_pve_integer.java  SQRT.java  capacity_to_ship.java  cnt_books.cpp  minm_days_for_m_bouquets.java  nthroot.java  smallest_div.java  split_array.java
DP/: 1. Intro.cpp  2. Climbing Stairs.cpp  3. FROG JUMP.cpp
DP[ADITYA VERMA]/: KNAPSACK TABULATION.cpp  KNAPSACK.cpp  Subset Sum.cpp  SubsetswithsumK.cpp  Target Sum.cpp  partitionswithgivendiff.cpp
GREEDY/: Activity_Selection.cpp  JUMP_GAME_1.java  MINM_INCREMENT.cpp  maxm_circular_sum.java  orig_array.cpp
Graphs/: BFS.cpp  DFS.cpp  REPRESENTATION.cpp
Graphs/PROBLEMS ON BFS AND DFS/: FLOOD FILL.cpp  NUMBER OF ISLANDS.cpp  NUMBER OF PROVINCE.cpp  ROTTEN ORANGES.cpp
LinkedList/: DLL.java  basics.java  intro.java  reverseDLL.java
Linkedlist/: implementation.java  intro.java
STL/: vector.cpp
hashing/: hashmap.cpp
recursion/: 1.cpp  SUM_1_N.cpp  balancedparenthesis.cpp  binarystrings.cpp  delete_middle.cpp  n_bit_binary.cpp  name_N.cpp  palindrome.cpp  perm_case_change.cpp  rev_stack.cpp  revarr.cpp  sortarr.cpp  sortstack.cpp  subsets.cpp
sorting/: bubble.cpp  insertion.cpp
